Fixed the alignments

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -85,19 +85,28 @@ li {
 	list-style-type: none;
 }
 
+.back-ground-black {
+	background-color:black !important;
+}
 /* Section Background */
 .home,
 .about,
 .services,
 .plans,
-.work,
-.contact {
+.work {
 	height: 110vh;
 	position: relative;
 }
-.why-choose-us-recognized,
+.supply-chain-solutions {
+	height: 195vh;
+	position: relative;
+}
+.contact {
+	height: 80vh;
+	position: relative;
+}
 .why-choose-us {
-	height: 220vh;
+	height: 120vh;
 	position: relative;
 }
 .about-our-company{
@@ -105,7 +114,11 @@ li {
 	position: relative;
 }
 .warehouse-1{
-	height: 125vh;
+	height: 245vh;
+	position: relative;
+}
+.warehouse-2{
+	height: 80vh;
 	position: relative;
 }
 
@@ -113,24 +126,35 @@ li {
 	height: 55vh;
 	position: relative;
 }
+.about-our-mission{
+	height: 45vh;
+	position: relative;
+}
+.about-our-values{
+	height: 70vh;
+	position: relative;
+}
 
 .services,
 .work,
-.contact,
+
 .testimonial,
 .footer {
 	background-color: var(--primary);
 }
-
+.contact,
 .about,
 .why-choose-us,
-.why-choose-us-recognized,
 .about-our-company,
 .about-our-vision,
 .warehouse-1,
+.warehouse-2,
 .plans,
 .company,
 .newsletter,
+.about-our-values,
+.supply-chain-solutions,
+
 .location {
 	background-color: var(--primary-light);
 }
@@ -138,6 +162,16 @@ li {
 .DirectorNote {
 	background-color: #832590;
 }
+
+.about-our-mission{
+	background-color: black;
+}
+
+
+.min-height-1{
+	min-height: 40vh;
+}
+
 
 .bottom {
 	/* background-color: black; */
@@ -643,7 +677,11 @@ li {
 	.about,
 	.about-our-company,
 .about-our-vision,
+.about-our-mission,
+.about-our-values,
+.supply-chain-solutions,
 .warehouse-1,
+.warehouse-2,
 	.contact,
 	.plans {
 		height: 100%;
